<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="9dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="#292828"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/action_image"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/img_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:text="@string/created"
                android:textColor="#686666"
                android:textSize="8sp"
                app:layout_constraintStart_toEndOf="@id/action_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/created"
                app:layout_constraintTop_toBottomOf="@id/created"
                tools:text="@string/created" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#686666"
                android:textSize="8sp"
                app:layout_constraintStart_toStartOf="@id/tv_created"
                app:layout_constraintTop_toBottomOf="@id/tv_created" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/created"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/type"
                android:textColor="#686666"
                android:textSize="8sp"
                app:layout_constraintStart_toEndOf="@id/action_image"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/type"
                app:layout_constraintTop_toBottomOf="@id/type"
                tools:text="@string/air_date" />

            <TextView
                android:id="@+id/dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/dimension"
                android:textColor="#686666"
                android:textSize="8sp"
                app:layout_constraintStart_toEndOf="@id/action_image"
                app:layout_constraintTop_toBottomOf="@id/tv_type"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="@id/type"
                app:layout_constraintTop_toBottomOf="@id/dimension"
                tools:text="@string/air_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>